# custom-discovery

./: Dockerfile  build.sh
catalog-extensions/: .gitignore  pyproject.toml
catalog-extensions/catalog_extensions/: __init__.py  apps.py  urls.py
catalog-extensions/catalog_extensions/api/: serializers.py  views.py
catalog-extensions/catalog_extensions/api/pagination/: __init__.py  pagination.py
catalog-extensions/catalog_extensions/api/serializers/: __init__.py  course.py  organization.py  program.py  subject.py
catalog-extensions/catalog_extensions/api/views/: __init__.py  courses.py  organizations.py  programs.py  subjects.py
catalog-extensions/catalog_extensions/models/: __init__.py
catalog-extensions/catalog_extensions/repositories/: course_repository.py  organization_repository.py  program_repository.py  subject_repository.py
catalog-extensions/catalog_extensions/services/: course_service.py  organization_service.py  program_service.py  subject_service.py
catalog-extensions/catalog_extensions/urls/: __init__.py  courses.py  homepage.py  media.py  organizations.py  programs.py  search.py  subjects.py
catalog-extensions/docs/api/: CATALOG_API.md
overrides/course_discovery/: urls.py
scripts/: sync_catalog_extensions.sh
